--- a/src/Bio/MW.KUNTUR.Bio.Persistence.CosmosDb/MW.KUNTUR.Bio.Persistence.CosmosDb.csproj
+++ b/src/Bio/MW.KUNTUR.Bio.Persistence.CosmosDb/MW.KUNTUR.Bio.Persistence.CosmosDb.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
