--- a/src/Bio/MW.KUNTUR.Bio.Persistence/MW.KUNTUR.Bio.Persistence.csproj
+++ b/src/Bio/MW.KUNTUR.Bio.Persistence/MW.KUNTUR.Bio.Persistence.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.40.0" />
   </ItemGroup>
 
 </Project>
