--- a/src/Bio/MW.KUNTUR.Bio.Persistence/MW.KUNTUR.Bio.Persistence.csproj
+++ b/src/Bio/MW.KUNTUR.Bio.Persistence/MW.KUNTUR.Bio.Persistence.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MW.KUNTUR.Bio.Domain\MW.KUNTUR.Bio.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
